installation process update